dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT([avrsvf0], [0.2.0], [aschweiz@users.sourceforge.net])

AM_INIT_AUTOMAKE([1.9 foreign])

AC_PROG_CC

AC_CHECK_HEADERS([stdlib.h])
AC_C_CONST
AC_FUNC_VPRINTF
AC_HEADER_STDC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

